Do a single query to extract non verified emails that have not been notified yet